# chess_engine

./: CMakeLists.txt  README.md
engine/include/: attacks.hpp  board.hpp  move.hpp  movegen.hpp  piece.hpp  position.hpp  types.hpp
engine/src/: attacks.cpp  board.cpp  main.cpp  movegen.cpp  position.cpp
